@@ -53,6 +53,11 @@ import { OnboardArea } from '../onboarding/OnboardArea';
 import { RepresentationContextProvider } from '../representations/RepresentationContextProvider';
 import { Router } from '../router/Router';
 import { siriusWebTheme as defaultTheme } from '../theme/siriusWebTheme';
+import {
+  ProjectSettingTabContribution,
+  projectSettingsTabExtensionPoint,
+} from '../views/project-settings/ProjectSettingsViewExtensionPoints';
+import { ProjectImagesSettings } from '../views/project-settings/images/ProjectImagesSettings';
 import { SiriusWebApplicationProps } from './SiriusWebApplication.types';
 
 const style = {
@@ -133,6 +138,13 @@ export const SiriusWebApplication = ({
     },
   ];
 
+  const projectSettingsTabContributions: ProjectSettingTabContribution[] = [
+    {
+      title: 'Images',
+      component: ProjectImagesSettings,
+    },
+  ];
+
   const internalExtensionRegistry = new ExtensionRegistry();
   internalExtensionRegistry.addComponent(workbenchMainAreaExtensionPoint, {
     identifier: 'sw_onboard',
@@ -142,6 +154,11 @@ export const SiriusWebApplication = ({
     identifier: 'sw_workbenchView',
     data: workbenchViewContributions,
   });
+  internalExtensionRegistry.putData(projectSettingsTabExtensionPoint, {
+    identifier: 'sw_projectSettingsTab',
+    data: projectSettingsTabContributions,
+  });
+
   if (extensionRegistry) {
     internalExtensionRegistry.addAll(
       extensionRegistry,
